Implement log4j and Extent report 3

--- a/pom.xml
+++ b/pom.xml
@@ -40,10 +40,16 @@
 		<dependency>
 			<groupId>com.aventstack</groupId>
 			<artifactId>extentreports</artifactId>
-			<version>4.1.6</version>
+			<version>3.0.6</version>
 		</dependency>
 	</dependencies>
 	<build>
+		<resources>
+			<resource>
+				<directory>src/main/java/com/chirag/seljava/ohrm/resources</directory>
+				<filtering>true</filtering>
+			</resource>
+		</resources>
 		<pluginManagement>
 			<plugins>
 				<plugin>
